[gd_scene load_steps=3 format=2]

[ext_resource path="res://ChestralServer.gd" type="Script" id=1]
[ext_resource path="res://ChestralBoss.tscn" type="PackedScene" id=2]

[node name="ChestralServer" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 19.0
margin_top = 520.0
margin_right = 385.0
margin_bottom = 881.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLog" type="TextEdit" parent="Panel"]
margin_left = 24.0
margin_top = 69.0
margin_right = 333.0
margin_bottom = 219.0
readonly = true
show_line_numbers = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelStatus" type="Label" parent="Panel"]
margin_left = 35.0
margin_top = 244.0
margin_right = 82.0
margin_bottom = 258.0
text = "STATUS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelConnections" type="Label" parent="Panel"]
margin_left = 34.0
margin_top = 268.0
margin_right = 128.0
margin_bottom = 282.0
text = "CONNECTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitRandom" type="Button" parent="Panel"]
margin_left = 268.0
margin_top = 258.0
margin_right = 355.0
margin_bottom = 289.0
text = "Hit Random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unbalance" type="Button" parent="Panel"]
margin_left = 269.0
margin_top = 298.0
margin_right = 356.0
margin_bottom = 329.0
text = "Unbalance"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIPs" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 15.0
margin_right = 334.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChestralBoss" parent="." instance=ExtResource( 2 )]
position = Vector2( 760, 526 )

[node name="ServerDataPulse" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="Panel/HitRandom" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Unbalance" to="." method="_on_Unbalance_pressed"]
[connection signal="timeout" from="ServerDataPulse" to="." method="_on_ServerDataPulse_timeout"]
